fix small text on mobile

--- a/src/styles/Section.css
+++ b/src/styles/Section.css
@@ -137,4 +137,8 @@ section.hero {
         align-items: center;
         text-align: center;
     }
+
+    section>.content.shrink-text>p{
+        max-width: 100%;
+    }
 }
